--- a/images.html
+++ b/images.html
@@ -14,22 +14,40 @@
             <a href="search.html">
                 Google Search
             </a>
-            <br>
-            <a href="advanced.html">
-                Google Advanced Search
-            </a>
         </div>
-
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <section>
-            <h1><span style="color: #4285F4;">G</span><span style="color: #DB4437;">o</span><span style="color: #F4B400;">o</span><span style="color: #4285F4">g</span><span style="color: #0F9D58;">l</span><span id="e" style="color: #DB4437;">e</span></h1>
-            </h1>
             <div class="images-logo">
-                <h4>images</h4>
+               <img src= "./Images/Google-images1.png">
             </div>
+            <br>
 
             <div class="textbox">
                 <form action="http://www.google.com/images">
-                <input type="text" name="q">
+                    <div id ="isearchbar">
+                        <input id="isearch_bar"
+                               type="text" 
+                               name="q" 
+                               autocomplete="off" 
+                               spellcheck="false" 
+                               role="combobox" 
+                               aria-live="polite">
+                            <br>
+                            <div id="icon-search" style="background-image: url(./Images/magnifying-glass.png);"></div>
+                                <img id="icon-i-mic" src="./Images/microphone.png">
+                                <img id="icon-camera" src="./Images/photo-camera.png">
+                                <img id="icon-magnifying-glass" 
+                                    type="submit" 
+                                    src="./Images/magnifying-glass.png" 
+                                    button.style.visibility= "hidden"
+                                    <button id="hide-button"> 
+                                    </button>
+                            </div>
+                    </div>
                 </form>     
             </div>  
 
@@ -56,6 +74,5 @@
                 </ul>
             </nav>
         </footer>
-    
     </body>
 </html>
