--- a/advanced.html
+++ b/advanced.html
@@ -12,7 +12,10 @@
 
         <header>
             <nav>
-                <img src="./Images/Google.png">
+                <a href="http://www.google.com">
+                    <img class="google-icon" 
+                        src="./Images/Google.png">
+                </a>
                 <ul class="links">
                     <a href="search.html">Google Search</a>
                 </ul>
@@ -26,44 +29,50 @@
         <br>
 
         <div class="Advanced-searchbox">
-            <p>Find pages with...</p>
+            <p>Find pages with...
+            <Font style="color:#777777; font-family:arial; padding-left:646px; font-size:13px; font-weight:bold;">To do this in the search box.</font></p>
+
+
             <form action="https://google.com/search" name="f">
             
                 <div class= "asearchbar">
-                    <label for="textbox">all these words:</label>
+                    <label for="textbox" style="font-size: 13px; color:#555555";>all these words:</label>
                     <input type="char" 
                             id="text-1" 
                             name="as_q" 
                             max-length="1000" 
                             size="71">
                     <label id="text" 
-                           for="text-1">
+                           for="text-1"
+                           style="width: 332px">
                            <Font face= "arial">Type the important words:</font>
                            <Font face= "monospace">tri-colour rat terrier</font></label>
                         <br>
                         <br>
 
-                    <label for="textbox">this exact word or phrase:</label>
+                    <label for="textbox" style="font-size: 13px; color:#555555">this exact word or phrase:</label>
                     <input type="char" 
                            id="text-2" 
                            name="as_epq" 
                            max-length="1000" 
                            size="71">
                     <label id="text"
-                           for="text-2">Put exact words in quotes:
+                           for="text-2"
+                           style="width: 332px">Put exact words in quotes:
                            <Font face= "monospace">"rat terrier"</font></label>
 
                         <br>
                         <br>
 
-                    <label for="textbox">any of these words:</label>
+                    <label for="textbox" style="font-size: 13px; color:#555555">any of these words:</label>
                     <input type="char" 
                            id="text-3" 
                            name="as_oq" 
                            max-length="1000" 
                            size="71">
                     <label id="text" 
-                           for="text-3">Type
+                           for="text-3"
+                           style="width: 332px">Type
                            <Font face= "monospace"> OR </font>
                            between all the words you want:
                            <Font face= "monospace"> miniature OR standard</font></label>
@@ -71,14 +80,15 @@
                         <br>
                         <br>
 
-                    <label for="textbox">none of these words:</label>
+                    <label for="textbox" style="font-size: 13px; color:#555555">none of these words:</label>
                     <input type="char" 
                            id="text-4" 
                            name="as_eq" 
                            max-length="1000" 
                            size="71">
                     <label id="text" 
-                           for="text-4">Put a minus sign just before words that you don't want:
+                           for="text-4"
+                           style="width: 275px">Put a minus sign just before words that you don't want:
                            <Font face= "monospace"> -rodent, -"Jack Russell"</font></label>
 
                         <br>
