--- a/images.html
+++ b/images.html
@@ -40,12 +40,12 @@
                             <div id="icon-search" style="background-image: url(./Images/magnifying-glass.png);"></div>
                                 <img id="icon-i-mic" src="./Images/microphone.png">
                                 <img id="icon-camera" src="./Images/photo-camera.png">
-                                <img id="icon-magnifying-glass" 
-                                    type="submit" 
-                                    src="./Images/magnifying-glass.png" 
-                                    button.style.visibility= "hidden"
-                                    <button id="hide-button"> 
-                                    </button>
+                                
+                                <input id="icon-magnifying-glass" 
+                                       type="image"       
+                                       src="./Images/magnifying-glass.png"
+                                       alt="Submit" >
+                                     
                             </div>
                     </div>
                 </form>     
