--- a/search.html
+++ b/search.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Google Search</title>
-        <link rel="icon" href="./Images/logo.png">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="./Images/logo.png"> 
+        <link rel="stylesheet" href="styles.css"> #Linking to the stylesheet
 
     </head>
     <body>
 
+        #Links in the top right corner
         <div class= "links">
             <a href="images.html">
                 Google Image Search
@@ -20,6 +21,8 @@
             </a>
         </div>
         <br>
+
+        #Main logo in the center of the page
         <section>
            <div class="search-logo">
                <img src= "./Images/google-logo.png">
@@ -43,6 +46,7 @@
                                 <input id="button_2" type="submit" value="I'm Feeling Lucky">
                             </div>
 
+                        #Icons in the searchbar
                         <div id="icon-search" style="background-image: url(./Images/magnifying-glass.png);"></div>
                         <img id="icon-mic" src="./Images/microphone.png">
                     </div>
