--- a/advanced.html
+++ b/advanced.html
@@ -4,21 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Google Advanced Search</title>
-        <link rel="icon" href="./Images/logo.png"> #icon in the tab
-        <link rel="stylesheet" href="styles.css"> #linking to the styles sheet
+        <link rel="icon" href="./Images/logo.png"> <!icon in the tab>
+        <link rel="stylesheet" href="styles.css"> <!linking to the styles sheet>
 
     </head>
     <body>
 
         <header>
             <nav>
-                #Small Google logo in the top left corner
+                <!Small Google logo in the top left corner>
                 <a href="http://www.google.com">
                     <img class="google-icon" 
                         src="./Images/Google.png"> 
                 </a>
 
-                #Link in the top right corner
+                <!Link in the top right corner>
                 <ul class="links">
                     <a href="search.html">Google Search</a>
                 </ul>
@@ -26,18 +26,18 @@
         </header> 
 
         <h2>Advanced Search</h2>
-        <div class="vertical-line"</div> #creates a vertical line
+        <div class="vertical-line"</div> <!creates a vertical line>
         <br>
         <br>
 
-        #Heading for the searches
+        <!Heading for the searches>
         <div class="Advanced-searchbox">
             <p>Find pages with...
             <Font style="color:#777777; font-family:arial; padding-left:646px; font-size:13px; font-weight:bold;">To do this in the search box.</font></p>
 
             <form action="https://google.com/search" name="f">
             
-                #Textbox labels and textboxes
+                <!Textbox labels and textboxes>
                 <div class= "asearchbar">
                     <label for="textbox" style="font-size: 13px; color:#555555";>all these words:</label>
                     <input type="char" 
@@ -99,7 +99,7 @@
                         <br>
                         
                     <div class="vertical-line"</div>
-                        #Advanced Search Button
+                        <!Advanced Search Button>
                         <div class="abutton">
                             <input id="advanced-button" type="submit" value="Advanced Search">
                         </div>
