--- a/images.html
+++ b/images.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Google Images</title>
         <link rel="icon" href="./Images/logo.png">
-        <link rel="stylesheet" href="styles.css"> #Linking to stylesheet
+        <link rel="stylesheet" href="styles.css"> <!Linking to stylesheet>
 
     </head>
     <body>
@@ -21,14 +21,14 @@
         <br>
         <br>
 
-        #Main logo in the center of the page
+        <!Main logo in the center of the page>
         <section>
             <div class="images-logo">
                <img src= "./Images/Google-images1.png">
             </div>
             <br>
 
-            #Textbox for the Google search page
+            <!Textbox for the Google search page>
             <div class="textbox">
                 <form action="http://www.google.com/images">
                     <div id ="isearchbar">
@@ -41,12 +41,12 @@
                                aria-live="polite">
                             <br>
 
-                            #Icons in the search bar
+                            <!Icons in the search bar>
                             <div id="icon-search" style="background-image: url(./Images/magnifying-glass.png);"></div>
                                 <img id="icon-i-mic" src="./Images/microphone.png">
                                 <img id="icon-camera" src="./Images/photo-camera.png">
                                 
-                                #Clickeable icon to search
+                                <!Clickeable icon to search>
                                 <input id="icon-magnifying-glass" 
                                        type="image"       
                                        src="./Images/magnifying-glass.png"
