--- a/search.html
+++ b/search.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Google Search</title>
         <link rel="icon" href="./Images/logo.png"> 
-        <link rel="stylesheet" href="styles.css"> #Linking to the stylesheet
+        <link rel="stylesheet" href="styles.css"> <!Linking to the stylesheet>
 
     </head>
     <body>
 
-        #Links in the top right corner
+        <!Links in the top right corner>
         <div class= "links">
             <a href="images.html">
                 Google Image Search
@@ -22,7 +22,7 @@
         </div>
         <br>
 
-        #Main logo in the center of the page
+        <!Main logo in the center of the page>
         <section>
            <div class="search-logo">
                <img src= "./Images/google-logo.png">
@@ -46,7 +46,7 @@
                                 <input id="button_2" type="submit" value="I'm Feeling Lucky">
                             </div>
 
-                        #Icons in the searchbar
+                        <!Icons in the searchbar>
                         <div id="icon-search" style="background-image: url(./Images/magnifying-glass.png);"></div>
                         <img id="icon-mic" src="./Images/microphone.png">
                     </div>
