--- a/advanced.html
+++ b/advanced.html
@@ -44,7 +44,8 @@
                             id="text-1" 
                             name="as_q" 
                             max-length="1000" 
-                            size="71">
+                            size="71"
+                            autocomplete="off">
                     <label id="text" 
                            for="text-1"
                            style="width: 332px">
@@ -58,7 +59,8 @@
                            id="text-2" 
                            name="as_epq" 
                            max-length="1000" 
-                           size="71">
+                           size="71"
+                           autocomplete="off">
                     <label id="text"
                            for="text-2"
                            style="width: 332px">Put exact words in quotes:
@@ -72,7 +74,8 @@
                            id="text-3" 
                            name="as_oq" 
                            max-length="1000" 
-                           size="71">
+                           size="71"
+                           autocomplete="off">
                     <label id="text" 
                            for="text-3"
                            style="width: 332px">Type
@@ -88,7 +91,8 @@
                            id="text-4" 
                            name="as_eq" 
                            max-length="1000" 
-                           size="71">
+                           size="71"
+                           autocomplete="off">
                     <label id="text" 
                            for="text-4"
                            style="width: 275px">Put a minus sign just before words that you don't want:
